# swiftdet

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
configs/: distill.yaml  swiftdet2_l.yaml  swiftdet2_m.yaml  swiftdet2_n.yaml  swiftdet2_n_overfit.yaml  swiftdet2_s.yaml  swiftdet_l.yaml  swiftdet_m.yaml  swiftdet_n.yaml  swiftdet_s.yaml
core/: __init__.py  cli.py  model.py  results.py
data/: __init__.py  augment.py  dataset.py  transforms.py
engine/: __init__.py  distiller.py  evaluator.py  pretrain.py  trainer.py
export/: __init__.py  coreml_export.py  onnx_export.py
losses/: __init__.py  dfl.py  distill.py  focal.py  iou.py
models/: __init__.py  backbone.py  backbone_v2.py  blocks.py  blocks_v2.py  detector.py  head.py  neck.py  neck_v2.py
utils/: __init__.py  assigner.py  boxes.py  ema.py  metrics.py  nms.py  plotting.py
